@@ -1,3 +1,12 @@
+2010-10-09  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclExecute.c: fix overallocation of exec stack in TEBC
+	(mixing numwords and numbytes)
+
+2010-10-08  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclIOSock.c: On Windows, use gai_strerrorA
+
 2010-10-06  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/winPipe.test:	Test hygiene with makeFile and removeFile.
